# gauntlet

./: .env.example  .gitignore  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: a9df514e479e_initial_schema.py
api/app/: auth.py  config.py  database.py  main.py  redis.py
api/app/models/: __init__.py  api_keys.py  base.py  eval_run.py  rubric.py  test_set.py  workspace.py
docs/: github-actions-example.yml
web/: package-lock.json  package.json
web/src/app/: layout.tsx
web/src/lib/: api.ts
