[project]
name = "gauntlet-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14.0",
    "redis>=5.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-cohere>=0.4.0",
    "langchain-mistralai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langfuse>=2.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "ragas>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true